--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 djangorestframework = "*"
 django-rest-auth = "*"
 django-allauth = "*"
+djangorestframework-jwt = "*"
 
 [dev-packages]
 
